@@ -29,9 +29,11 @@ Changes in Go4 v5.2.x (spring 2017)
    such history and font, also appear as "Settings/Terminal" submenus now. Thanks Sven Augustin for this idea.
 2. Store "Apply to all" flag of the viewpanel in the hotstart.
 3. Provide "Auto zoom" flag for the viewpanel. If set, all histograms will be automatically zoomed into non-zero range.
-   Useful with monitoring, also preserved in hotstart file.
+   Useful with monitoring, also preserved in hotstart file.   
 4. One can specify GO4EXTRAINCLUDE shell variable, which automatically add to gInterpreter->AddIncludePath when
    starting go4analysis.  This required when user classes should be used in ACLiC with ROOT6.  
+5. Bugfix: Display of TGraph like objects in GUI will update also the TF1 functions contained in the graph,
+   like fitter results. Previously the first TF1 fetched was never changed again.   
 
 
 Changes in Go4 v5.2.0 (January 2017)
